# minimal_project

./: CMakeLists.txt  FAQ.md  INSTALL.md  README.md
src/: CMakeLists.txt
